# edgeai-yolox

./: README.md  integration_test.py  leap.yaml  leap_binder.py  pyproject.toml  requirements.txt  requirements_local.txt  setup.sh  tensorleap_config.yaml  tensorleap_docs_cli.py  tensorleap_getting_started.html
data/coco-person128/: train2017_128.txt  unlabeled2017_50.txt  val2017_32.txt
data/coco-person128/annotations/: image_info_unlabeled2017_50.json  instances_train2017_128.json  instances_val2017_32.json
tools/: demo.py  export_onnx.py  filter_coco_person_json.py  onnx_head_wrappers.py
yolox/data/datasets/: __init__.py  coco.py
yolox/models/: yolo_head.py
