[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "edgeai-yolox"
version = "0.1.0"
description = "YOLOX object detection demo utilities"
authors = ["Tensorleap"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = ">=1.23,<2.0"
torch = ">=1.8.0"
torchvision = ">=0.9.0"
opencv-python = "*"
loguru = "*"
scikit-image = "*"
tqdm = "*"
thop = "*"
ninja = "*"
tabulate = "*"
tensorboard = "*"
seaborn = "0.11.2"
#onnx-simplifier = "0.4.10"
plyfile = "0.7.4"
scikit-learn = "*"
PyYAML = "*"
matplotlib = "*"
protobuf = "3.20.*"
pycocotools = "^2.0.10"
code-loader = "^1.0.150"
onnxruntime = ">=1.12.0,<1.17.0"
pytest = "<9.0.1"

